# otus-microservices

./: README.md
01_kubernetes_2/: Makefile
01_kubernetes_2/kubernetes/: service.yaml
02_kubernetes_3/: Makefile  README.md
02_kubernetes_3/myapp-chart/: Chart.yaml  values.yaml
02_kubernetes_3/postman/: local.postman_environment.json
02_kubernetes_3/service/: Dockerfile  docker-compose.yml
03_prometheus/: Makefile  README.md
03_prometheus/myapp-chart/: dashboards.json  values.yaml
03_prometheus/service/: .dockerignore  .gitignore  Cargo.toml  docker-compose.yml
03_prometheus/service/migrations/: V1_users.sql
03_prometheus/service/src/: config.rs  data.rs  error.rs  handler.rs  lib.rs  main.rs  metrics.rs
03_prometheus/service/src/db/: migration.rs  mod.rs
kubernetes_2/: Makefile  README.md
kubernetes_2/kubernetes/: deployment.yaml  ingress.yaml
kubernetes_2/service/: .dockerignore  Cargo.toml  Dockerfile
kubernetes_3/: Makefile  README.md  postgresql.values.yaml
kubernetes_3/charts/: bitnami-postgresql-10.13.7.tgz
kubernetes_3/kubernetes/: 0-namespace.yaml  1-secret.yaml  2-configmap.yaml  2-deployment.yaml  3-ingress.yaml  3-job.yaml  4-deployment.yaml  4-service.yaml  5-configmap.yaml  5-service.yaml  6-ingress.yaml  deployment.yaml  ingress.yaml  service.yaml
kubernetes_3/service/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
kubernetes_3/service/migrations/: init.sql
kubernetes_3/service/src/: config.rs  data.rs  db.rs  error.rs  handler.rs  lib.rs  main.rs
kubernetes_3/service/src/db/: migration.rs  mod.rs
(+16 files in other folders)
