[package]
name = "service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
pretty_env_logger = "0.4"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
mobc = "0.5"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
